@@ -4898,12 +4898,7 @@ name|Text
 argument_list|>
 name|columnSet
 init|=
-operator|new
-name|HashSet
-argument_list|<
-name|Text
-argument_list|>
-argument_list|()
+literal|null
 decl_stmt|;
 if|if
 condition|(
@@ -4912,6 +4907,15 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|columnSet
+operator|=
+operator|new
+name|HashSet
+argument_list|<
+name|Text
+argument_list|>
+argument_list|()
+expr_stmt|;
 name|columnSet
 operator|.
 name|addAll
